<resources>
    <string name="Caching">正在缓存</string>
    <string name="LOADING">Loading...</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account_has_registered">该账号已注册</string>
    <string name="account_information">账号信息</string>
    <string name="account_not_exist">该账户不存在</string>
    <string name="account_or_password_error">账号或密码错误</string>
    <string name="add">添加</string>
    <string name="add_with_count">添加 %d</string>
    <string name="added_and_download_whis_is_wifi">已加入，仅在Wi-Fi下缓存</string>
    <string name="added_to_cache_list">已加入缓存列表</string>
    <string name="agree_and_continue">同意并继续</string>
    <string name="agree_hitv_privacy_policy">登录或注册表示同意</string>
    <string name="agreement_and_privacy_policy">用户协议与隐私政策</string>
    <string name="all_have_been_added_to_the_cache_list">已全部加入缓存列表</string>
    <string name="all_pause">全部暂停</string>
    <string name="all_photos">所有照片</string>
    <string name="all_series">全部剧集</string>
    <string name="all_start">全部开始</string>
    <string name="allow_not_wifi_cache">允许非WiFi下缓存</string>
    <string name="allow_not_wili_play">允许非WiFi下播放</string>
    <string name="already_the_last_episode">已经是最后一集</string>
    <string name="and">和</string>
    <string name="app_name">HiTV Pro</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="applovin_list_item_image_description">Displays more info about the list item.</string>
    <string name="backward_seconds">-%ds</string>
    <string name="black_keyword_add_successfully">屏蔽词添加成功</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="brightness">亮度</string>
    <string name="btn_confirm">确认</string>
    <string name="cache_all">全部缓存</string>
    <string name="cache_delete_notice_text">将从您的缓存列表中移除，不可恢复，确认删除吗？</string>
    <string name="cache_error">缓存出错</string>
    <string name="cache_fail">缓存失败</string>
    <string name="cache_file_erroe_to_play_online">缓存文件出错，是否使用在线播放？</string>
    <string name="cache_more">缓存更多</string>
    <string name="cache_more_series">缓存更多集数</string>
    <string name="cache_notify">缓存提示</string>
    <string name="cache_setting">缓存设置</string>
    <string name="cache_without_wifi">使用流量缓存</string>
    <string name="cached">已缓存</string>
    <string name="cached_and_surplus_space" formatted="false">已缓存 %s 剩余 %s 可用</string>
    <string name="cached_video_damaged">缓存视频损坏，可以选择在线播放哦，</string>
    <string name="campaign.appName">getAppName</string>
    <string name="campaign.iconUrl">getIconUrl</string>
    <string name="campaign.imageUrl">getImageUrl</string>
    <string name="cancel">取消</string>
    <string name="cancel_report">取消举报</string>
    <string name="cancel_select_all">取消全选</string>
    <string name="carrier_network_pause_download_and_can_open_in_setting">运营商网络下已为您暂停，如仍需缓存可以到[设置]里开启。</string>
    <string name="cast_tv">投电视</string>
    <string name="cate_title">全部剧集</string>
    <string name="category_default_toast">试试其他类型</string>
    <string name="category_search_hint">搜索片名、主演</string>
    <string name="change_bind_email_failure">邮箱绑定失败</string>
    <string name="change_bind_email_success">邮箱绑定成功</string>
    <string name="change_bind_mobile_failure">手机号绑定失败</string>
    <string name="change_bind_mobile_success">手机号绑定成功</string>
    <string name="change_language_Arabic">阿拉伯语</string>
    <string name="change_language_Chinese">简体中文</string>
    <string name="change_language_English">英语</string>
    <string name="change_language_Indonesian">印尼语</string>
    <string name="change_language_Spanish">西班牙语</string>
    <string name="change_language_Thai">泰语</string>
    <string name="change_language_Vietnamese">越南语</string>
    <string name="change_login_password_failure">密码修改失败</string>
    <string name="change_login_password_success">密码修改成功</string>
    <string name="change_region">Change region</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="clear">清空</string>
    <string name="clear_confirm">确认清空搜索记录吗？</string>
    <string name="click_to_retry">点击重试</string>
    <string name="close_content">收起</string>
    <string name="color">颜色</string>
    <string name="colorful">彩色</string>
    <string name="column">选集</string>
    <string name="com.crashlytics.android.build_id">eb6b2581230a4d52a70ff2aba445acdb</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b>facebook.com/device&lt;/b> and enter the code shown above.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading…</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_continue">Continue with Facebook</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_smart_device_instructions">To connect your account, open the Facebook app on your mobile device and check for notifications.</string>
    <string name="com_facebook_smart_device_instructions_or">- OR -</string>
    <string name="com_facebook_smart_login_confirmation_cancel">Not you?</string>
    <string name="com_facebook_smart_login_confirmation_continue_as">Continue as %1$s</string>
    <string name="com_facebook_smart_login_confirmation_title">Confirm Login</string>
    <string name="com_facebook_tooltip_default">"You're in control - choose what info you want to share with apps."</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="confirm">确认</string>
    <string name="confirm_deletion">确认删除</string>
    <string name="confirm_disconnect_dlna_device">是否断开连接DLNA设备</string>
    <string name="confirm_report">确定举报</string>
    <string name="contact_way">联系方式</string>
    <string name="contact_way_hint">请填写E-mail或其他联系方式</string>
    <string name="content_has_nothing_to_do_with_this_video">内容与本视频无关</string>
    <string name="continue_play">继续播放</string>
    <string name="count_danmaku">条弹幕</string>
    <string name="cube_ptr_hours_ago"> hours ago</string>
    <string name="cube_ptr_last_update">last update: </string>
    <string name="cube_ptr_minutes_ago"> minutes ago</string>
    <string name="cube_ptr_pull_down">Pull Down</string>
    <string name="cube_ptr_pull_down_to_refresh">Pull Down to Refresh</string>
    <string name="cube_ptr_refresh_complete">Updated.</string>
    <string name="cube_ptr_refreshing">Updating...</string>
    <string name="cube_ptr_release_to_refresh">Release To Refresh</string>
    <string name="cube_ptr_seconds_ago"> seconds ago</string>
    <string name="current_danmaku_list">当前弹幕列表</string>
    <string name="current_level">清晰度:</string>
    <string name="danmaku_alpha">弹幕透明度</string>
    <string name="danmaku_block">弹幕屏蔽</string>
    <string name="edit">编辑</string>
    <string name="feedback_add_diagnostic_info">在反馈中添加系统诊断信息</string>
    <string name="feedback_info_hint">出了什么问题?</string>
    <string name="home_mine_feed_back">问题反馈</string>
    <string name="my_cache">我的下载</string>
    <string name="preview_picture">预览</string>
    <string name="send">发送</string>
</resources>