<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@color/color_17171a" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <FrameLayout android:id="@id/feed_back_title_fl" android:background="@color/theme_color" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <RelativeLayout android:id="@id/feed_back_title_rl" android:background="@color/color_2e2d2d" android:layout_width="fill_parent" android:layout_height="@dimen/px94_750" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/change_language_title_fl">
        <RelativeLayout android:id="@id/back_rl" android:layout_width="@dimen/px84_750" android:layout_height="fill_parent">
            <ImageView android:id="@id/back_iv" android:layout_width="@dimen/px20_750" android:layout_height="@dimen/px40_750" android:src="@mipmap/back_icon" android:layout_centerInParent="true" android:rotationY="@integer/rtl_image_rotationY" />
        </RelativeLayout>
        <TextView android:textSize="@dimen/px36t_750" android:textStyle="bold" android:textColor="@color/color_80_ffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/home_mine_feed_back" android:layout_centerInParent="true" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/feed_back_info_rl" android:background="@color/color_232326" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/feed_back_title_rl">
        <EditText android:textSize="@dimen/px30t_750" android:textColor="@color/color_ffffff" android:textColorHint="@color/color_666666" android:gravity="top" android:id="@id/feed_back_info_et" android:background="@null" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/px40_750" android:hint="@string/feedback_info_hint" android:lines="5" android:includeFontPadding="false" android:maxLength="1000" android:lineSpacingExtra="@dimen/px20_750" android:lineSpacingMultiplier="1.0" android:layout_marginStart="@dimen/px30_750" android:layout_marginEnd="@dimen/px30_750" />
        <androidx.recyclerview.widget.RecyclerView android:id="@id/pics_rv" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/px40_750" android:layout_below="@id/feed_back_info_et" android:layout_marginEnd="@dimen/px30_750" />
    </RelativeLayout>
    <TextView android:textSize="@dimen/px28t_750" android:textColor="@color/color_cccccc" android:id="@id/contact_way_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/px60_750" android:text="@string/contact_way" android:layout_marginStart="@dimen/px24_750" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/feed_back_info_rl" />
    <EditText android:textSize="@dimen/px30t_750" android:textColor="@color/color_ffffff" android:textColorHint="@color/color_666666" android:id="@id/contact_way_et" android:background="@color/color_232326" android:layout_width="0.0dip" android:layout_height="@dimen/px98_750" android:layout_marginTop="@dimen/px30_750" android:hint="@string/contact_way_hint" android:maxLines="1" android:includeFontPadding="false" android:lineSpacingExtra="@dimen/px20_750" android:lineSpacingMultiplier="1.0" android:paddingStart="@dimen/px20_750" android:layout_marginStart="@dimen/px24_750" android:layout_marginEnd="@dimen/px24_750" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/contact_way_tv" />
    <ImageView android:id="@id/select_learn_more_iv" android:layout_width="@dimen/px26_750" android:layout_height="@dimen/px26_750" android:layout_marginTop="@dimen/px40_750" android:src="@mipmap/feedback_selected_icon" android:layout_marginStart="@dimen/px24_750" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/contact_way_et" />
    <TextView android:textSize="@dimen/px26t_750" android:textColor="@color/color_aaaaaa" android:id="@id/feed_back_info_tv" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/px10_750" android:layout_marginTop="@dimen/px35_750" android:layout_marginRight="@dimen/px24_750" android:text="@string/feedback_add_diagnostic_info" android:includeFontPadding="false" android:lineSpacingExtra="@dimen/px12_750" android:lineSpacingMultiplier="1.0" android:layout_marginStart="@dimen/px10_750" android:layout_marginEnd="@dimen/px24_750" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/select_learn_more_iv" app:layout_constraintTop_toBottomOf="@id/contact_way_et" />
    <com.gohitv.hitv.ui.view.GradientBackgroundTextView android:textSize="@dimen/px32_750" android:textColor="@color/color_aaaaaa" android:gravity="center" android:id="@id/send_tv" android:layout_width="fill_parent" android:layout_height="@dimen/px80_750" android:layout_marginTop="@dimen/px40_750" android:text="@string/send" android:layout_marginStart="@dimen/px24_750" android:layout_marginEnd="@dimen/px24_750" app:cm_endColor="@color/color_531866" app:cm_gradientType="left_right" app:cm_radius="@dimen/px40_750" app:cm_startColor="@color/color_662946" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/feed_back_info_tv" />
    <com.gohitv.hitv.ui.view.CustomChrysanthemumLoadingView android:id="@id/loading_view" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>