<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/color_232326" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:id="@id/top_fl" android:background="@color/theme_color" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <RelativeLayout android:id="@id/video_download_rl" android:background="@color/theme_color" android:layout_width="fill_parent" android:layout_height="@dimen/px94_750" android:layout_below="@id/top_fl">
        <TextView android:textSize="@dimen/px36t_750" android:textStyle="bold" android:textColor="@color/color_ffffff" android:ellipsize="end" android:id="@id/title_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/my_cache" android:maxLines="1" android:maxEms="10" android:layout_centerInParent="true" />
        <RelativeLayout android:id="@id/back_rl" android:layout_width="@dimen/px84_750" android:layout_height="fill_parent">
            <ImageView android:id="@id/back_iv" android:layout_width="@dimen/px20_750" android:layout_height="@dimen/px40_750" android:src="@mipmap/back_icon" android:layout_centerInParent="true" android:rotationY="@integer/rtl_image_rotationY" />
        </RelativeLayout>
        <TextView android:textSize="@dimen/px36t_750" android:textColor="@color/color_ffffff" android:gravity="center" android:id="@id/edit_tv" android:paddingLeft="@dimen/px27_750" android:paddingRight="@dimen/px27_750" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/edit" android:layout_alignParentRight="true" android:paddingStart="@dimen/px27_750" android:paddingEnd="@dimen/px27_750" android:layout_alignParentEnd="true" />
    </RelativeLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/cache_more_ll" android:layout_width="fill_parent" android:layout_height="@dimen/px120_750" android:layout_marginTop="@dimen/px20_750" android:layout_below="@id/video_download_rl">
        <ImageView android:layout_gravity="center_vertical" android:layout_width="@dimen/px192_750" android:layout_height="@dimen/px108_750" android:layout_marginLeft="@dimen/px30_750" android:src="@mipmap/cache_more_icon" android:layout_marginStart="@dimen/px30_750" />
        <TextView android:textSize="@dimen/px28t_750" android:textColor="@color/color_cccccc" android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="@dimen/px30_640" android:text="@string/cache_more_series" android:layout_marginStart="@dimen/px30_640" />
    </LinearLayout>
    <include android:id="@id/edit_bottom_rl" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="@dimen/px88_640" android:layout_alignParentBottom="true" layout="@layout/edit_bottom_layout" />
    <FrameLayout android:id="@id/my_cache_item_fragment_container" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_above="@id/edit_bottom_rl" android:layout_below="@id/cache_more_ll" />
</RelativeLayout>